# tss-credential-plugin

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
credential_plugins/: __init__.py  delinea_secret_server.py
credential_type/: credential_type_input.yaml
examples/: example_playbook.yaml
scripts/: release.sh
tests/: test_delinea_credential_plugin.py  test_integration.py
