[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awx-delinea-secret-server-credential-plugin"
version = "0.2.3"
description = "AWX/AAP credential plugin for Delinea (Thycotic) Secret Server"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "kew"}]
keywords = ["ansible", "awx", "aap", "credential", "plugin", "delinea", "thycotic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "python-tss-sdk>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/your-org/tss-credential-plugin"
Repository = "https://github.com/your-org/tss-credential-plugin.git"
Issues = "https://github.com/your-org/tss-credential-plugin/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "isort>=5.11.0",
    "mypy>=0.990",
]

[project.entry-points."awx.credential_plugins"]
delinea_secret_server = "credential_plugins:delinea_secret_server"

[tool.setuptools]
packages = ["credential_plugins"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
